# financial-frontend

./: .gitmodules  Cargo.toml  README.md  index.html
.cargo/: config.toml
assets/: manifest.json  sw.js
locales/: zh-CN.yml
rpc/: Cargo.toml  build.rs
rpc/proto/: api.proto
rpc/src/: lib.rs
src/: app.rs  constants.rs  debug_panel.rs  financial_analysis.rs  issue.rs  lib.rs  login.rs  main.rs  message.rs  rpc_client.rs  rpc_client_wasm.rs  service.rs  stock_view.rs  trading_history.rs  utils.rs
