[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.8.3", default-features = false, features = [
    "prost",
    "codegen",
] }
prost = { version = "0.11.6" }

[build-dependencies]
tonic-build = { version = "0.8.4", default-features = false, features = ["prost"] }
